--- a/A67_21.html
+++ b/A67_21.html
@@ -70,6 +70,9 @@
             <div class="offcanvas offcanvas-end" tabindex="0" id="offcanvasOptions" aria-labelledby="offcanvasOptionsLabel" data-bs-scroll="true" data-bs-backdrop="false"></div>
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
+                  <div class="col-md-2 col-lg-2 col-sm-12">
+                     <h1><a href="S1_68.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
+                  </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">S 1/68</h1>
                      <h3 align="center"><a href="S1_68.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
@@ -78,6 +81,7 @@
                      <p class="document_info archival_small" align="center"></p>
                      <div align="center" class="revision_desc created"> maschinell erfasster Rohtext </div>
                   </div>
+                  <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right"></div>
                </div>
                <div id="container-resize" class="row transcript active">
                   <div id="img-resize" class="col-md-6 col-lg-6 col-sm-12 facsimiles">
