--- a/S1_69.html
+++ b/S1_69.html
@@ -70,6 +70,7 @@
             <div class="offcanvas offcanvas-end" tabindex="0" id="offcanvasOptions" aria-labelledby="offcanvasOptionsLabel" data-bs-scroll="true" data-bs-backdrop="false"></div>
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
+                  <div class="col-md-2 col-lg-2 col-sm-12"></div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">Antiphonarium de Sanctis Trium Ordinum Sancti Patris Francisci</h1>
                      <h3 align="center"><a href="S1_69.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
@@ -77,6 +78,9 @@
                      <p class="document_info archival_small" align="center"> (print )</p>
                      <p class="document_info archival_small" align="center"></p>
                      <div align="center" class="revision_desc created"> maschinell erfasster Rohtext </div>
+                  </div>
+                  <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right">
+                     <h1><a href="A70_41.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
                   </div>
                </div>
                <div id="container-resize" class="row transcript active">
